--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "server.js",
   "scripts": {
     "start:dev": "concurrently \"cd client && npm run build\" \"cd server && npm run server\"",
-		"start": "npm run build && cd server && node server.js",
-		"server": "cd server node server.js --ignore client",
-		"build": "cd client && npm run build",
-		"install": "cd client && npm install",
-		"client": "cd client && npm start"
+    "start": "npm run build && cd server && node server.js",
+    "server": "cd server node server.js --ignore client",
+    "build": "cd client && npm run build",
+    "install": "cd client && npm install",
+    "client": "cd client && npm start"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "nodemon": "^2.0.4"
   }
 }
